force-app/main/default/objects/RD_Drawings__c/RD_Drawings__c.object-meta.xml
<CustomObject>
    <label>RD Drawings</label>
    <nameField>
        <label>RD Drawings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Drawings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>