force-app/main/default/objects/RD_Drawings__c/fields/Dim_B_Override__c.field-meta.xml
<CustomField>
    <fullName>Dim_B_Override__c</fullName>
    <label>Dim B Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>