force-app/main/default/objects/RD_Drawings__c/fields/Drawing_ID__c.field-meta.xml
<CustomField>
    <fullName>Drawing_ID__c</fullName>
    <label>Drawing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>