force-app/main/default/objects/RD_Drawings__c/fields/Drawing_Info__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Info__c</fullName>
    <label>Drawing Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>