force-app/main/default/objects/RD_Drawings__c/fields/IINO_Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>IINO_Drawing_Number__c</fullName>
    <label>IINO Drawing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>