force-app/main/default/objects/RD_Drawings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rupture_Disc__c</columns>
    <columns>Dim_A__c</columns>
    <columns>Dim_B__c</columns>
    <columns>Dim_C__c</columns>
    <columns>Dim_D__c</columns>
    <columns>Drawing_ID__c</columns>
    <columns>Drawing_Info__c</columns>
    <columns>Drawing_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rupture_Disc__c</field>
        <operation>equals</operation>
        <value>RD-0000548</value>
    </filters>
    <label>All</label>
</ListView>